src/component/searchable_list/snapshots/envision__component__searchable_list__snapshot_tests__snapshot_custom_placeholder.snap
---
source: src/component/searchable_list/snapshot_tests.rs
assertion_line: 106
expression: terminal.backend().to_string()
---
┌ Filter ──────────────────────────────────────────────────┐
│Search fruits...                                          │
└───────────────────────────────────────────────────── 5/5 ┘
┌──────────────────────────────────────────────────────────┐
│> Apple                                                   │
│  Banana                                                  │
│  Cherry                                                  │
│  Date                                                    │
│  Elderberry                                              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
