src/component/searchable_list/snapshots/envision__component__searchable_list__snapshot_tests__snapshot_default_empty.snap
---
source: src/component/searchable_list/snapshot_tests.rs
assertion_line: 27
expression: terminal.backend().to_string()
---
┌ Filter ──────────────────────────────────────────────────┐
│Type to filter...                                         │
└───────────────────────────────────────────────────── 0/0 ┘
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
