src/component/searchable_list/snapshots/envision__component__searchable_list__snapshot_tests__snapshot_filtered.snap
---
source: src/component/searchable_list/snapshot_tests.rs
assertion_line: 80
expression: terminal.backend().to_string()
---
┌ Filter ──────────────────────────────────────────────────┐
│a                                                         │
└───────────────────────────────────────────────────── 3/5 ┘
┌──────────────────────────────────────────────────────────┐
│> Apple                                                   │
│  Banana                                                  │
│  Date                                                    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
