src/component/searchable_list/snapshots/envision__component__searchable_list__snapshot_tests__snapshot_no_matches.snap
---
source: src/component/searchable_list/snapshot_tests.rs
assertion_line: 94
expression: terminal.backend().to_string()
---
┌ Filter ──────────────────────────────────────────────────┐
│xyz                                                       │
└───────────────────────────────────────────────────── 0/5 ┘
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
