src/component/searchable_list/snapshots/envision__component__searchable_list__snapshot_tests__snapshot_populated.snap
---
source: src/component/searchable_list/snapshot_tests.rs
assertion_line: 39
expression: terminal.backend().to_string()
---
┌ Filter ──────────────────────────────────────────────────┐
│Type to filter...                                         │
└───────────────────────────────────────────────────── 5/5 ┘
┌──────────────────────────────────────────────────────────┐
│> Apple                                                   │
│  Banana                                                  │
│  Cherry                                                  │
│  Date                                                    │
│  Elderberry                                              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
