src/component/searchable_list/snapshots/envision__component__searchable_list__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/searchable_list/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Filter ──────────────────────────────┐
│Type to filter...                     │
└───────────────────────────────── 5/5 ┘
> Apple                                 
  Banana                                
  Cherry                                
  Date                                  
  Elderberry
